# Frontier_-1_ESP32

./: .gitignore  CMakeLists.txt  build_out.txt  generate_lemier_https_cert.sh  new.cpp  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  NETWORK_MANAGER_API.md  UART_MANAGER_API.md  auth_service.c  auth_service.h  authentication.c  authentication.h  board_pins.h  eap_tls_supplicant.c  eap_tls_supplicant.h  ethernet_init.c  ethernet_init.h  handlertest.c  http_server.h  https_server.c  https_server.h  main.c  main.cpp  my_mib.c  my_mib.h  network_config.c  network_config.h  network_manager.c  network_manager.h  ntp_adapter.c  ntp_adapter.h  nvs_config.c  nvs_config.h  snmp_agent.c  snmp_agent.h  spiffs_driver.c  spiffs_driver.h  tcp_server.h  uart_manager.c  uart_manager.h  uart_manager_xr20_legacy.c  web_api.c  web_api.h  xr20m1280.c  (+2 more)
main/certs/: ca.key  ca.pem  client.crt  client.key  server.crt  server.key
